# stock-radar

./: .env.example  .gitignore  README.md  ecosystem.config.js  exec_entry.py  pyproject.toml
conf/: token.txt
scripts/: publish_site.sh
src/: backtest.py  executor.py  holiday.py  main.py  notifier.py  scanner.py  site_export.py  strategy.py  trading.py
web/: README.md  astro.config.mjs  package-lock.json  package.json
web/public/: robots.txt
web/src/components/: HoldingsTable.astro  MetricCard.astro  PlanCard.astro  TradesTable.astro  WeeklyCard.astro
web/src/data/: holdings.json  latest.json  plan.json  proofs.json  trades.json  weekly.json
web/src/layouts/: BaseLayout.astro
web/src/lib/: format.ts
web/src/pages/: about.astro  holdings.astro  index.astro  proofs.astro  trades.astro
web/src/pages/weekly/: [slug].astro  index.astro
web/src/styles/: global.css
webull_sdk/: pyproject.toml
webull_sdk/webull/core/http/initializer/token/: token_operation.py
webull_sdk/webull/trade/request/: palce_order_request.py
webull_sdk/webull/trade/request/v2/: get_order_open_request.py  place_option_request.py  place_order_request.py  replace_order_request.py
