[project]
name = "stock-radar"
version = "0.1.0"
description = "SP500 Top 20 强势股票雷达"
requires-python = ">=3.10"

dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "lxml>=6.1.1",
    "html5lib>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
