[project]
name = "webull-openapi-python-sdk"
version = "2.0.12"
requires-python = ">=3.8"
dependencies = ["jmespath>=0.9.3", "cachetools>=5.2.0", "paho-mqtt>=1.6.1,<2", "urllib3>=2.0", "requests>=2.31.0", "six>=1.16.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webull"]
